🚨 CRITICAL SECURITY FIX: Remove secrets and sensitive data
❌ REMOVED FROM REPO:
• .env file (contained JWT_SECRET)
• Hardcoded credentials (patryk/metageniusz)
• Private session logs (ai_psyche_*, daily_report_*, mswr_system_test_*)
• Compiled Python files (__pycache__, *.pyc)

✅ SECURITY IMPROVEMENTS:
• Enhanced .gitignore with comprehensive security rules
• Moved auth credentials to environment variables
• Added proper security warnings and TODOs
• Removed sensitive session data from version control

⚠️ ACTION REQUIRED:
• Change all passwords and secrets in production
• Use proper user database instead of hardcoded auth
• Review and rotate any exposed credentials

🔒 Files now properly protected from accidental commits.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,109 @@
+# Security-focused .gitignore for MŚWR v2.0
+
+# ============================================================================
+# 🚨 CRITICAL SECURITY FILES - NEVER COMMIT THESE!
+# ============================================================================
+
+# Environment files with secrets
+.env
+.env.local
+.env.*.local
+.env.production
+.env.staging
+.env.development
+
+# ============================================================================
+# PYTHON
+# ============================================================================
+
+# Compiled Python files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
 .venv/
-repos/
+venv/
+ENV/
+env/
+
+# ============================================================================
+# 🚨 LOGS, REPORTS, SESSION DATA (PRIVACY SENSITIVE)
+# ============================================================================
+
+# AI session logs and reports
+ai_psyche_gok_ai_session_*.json
+ai_psyche_*.json
+daily_report_*.json
+mswr_system_test_*.json
+mswr_v2_history_*.json
+pinkplay_swr_analytics_*.json
+*.session.json
+*.report.json
+
+# General logs
 *.log
+logs/
+log/
+
+# ============================================================================
+# REPOSITORIES & LARGE FILES
+# ============================================================================
+
+repos/
+
+# ============================================================================
+# IDE / EDITOR FILES
+# ============================================================================
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+
+# ============================================================================
+# NODE.JS
+# ============================================================================
+
+node_modules/
+npm-debug.log*
+
+# ============================================================================
+# SYSTEM FILES
+# ============================================================================
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+Desktop.ini
+
+# ============================================================================
+# SECURITY & KEYS
+# ============================================================================
+
+# Private keys
+*.pem
+*.key
+*.p12
+*.pfx
+
+# Certificate files
+*.crt
+*.cert
+*.cer
+
+# ============================================================================
+# TEMPORARY FILES
+# ============================================================================
+
+tmp/
+temp/
+.tmp/
+.cache/
